# SunoAPI

./: .dockerignore  .env.template  .flaskenv  .gitignore  Dockerfile  README.md  app.py  configs.py  entities.py  kee_alive_manager.py  main.py  middlewares.py  models.py  mq_main.py  pyproject.toml  request_model.py  run.sh  suno.py  suno_client.py  suno_http.py  test.ipynb  test.py
alembic/: env.py
alembic/versions/: 1d2fa29e9257_创建suno_job表.py  80fe267772c9_添加suno_job_表.py
controller/: __init__.py  lyrics_controller.py  music_controller.py
docker/: docker-compose.yaml  entrypoint.sh
docker/volumes/logs/fastapi/: app.log.2024-09-19_16  app.log.2024-09-19_18  app.log.2024-09-23_12  app.log.2024-09-23_13  app.log.2024-09-23_14  app.log.2024-09-23_15  app.log.2024-09-23_16  app.log.2024-09-23_17  app.log.2024-09-23_18
extentions/: ext_app.py  ext_database.py  ext_lock.py  ext_logger.py  ext_middlewares.py  ext_rabbitmq.py  ext_response_hooks.py  ext_restful_api.py  ext_suno.py
migrations/versions/: 000000000000_init_db.py  3e9333579efd_add_suno_job.py
services/: lyrics_service.py  mq_service.py  music_service.py
suno/: __init__.py  entities.py  exceptions.py  kee_alive_manager.py  keep_alive_manager.py  suno.py  suno_client.py  suno_service.py
