[tool.poetry]
name = "Suno"
version = "0.0.0"
readme = "README.md"
description = "一个非官方的suno api实现"
packages = [
    {include = "suno"}
]
authors = ["krasus <krasus@chen.red>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.5"
requests = "^2.32.3"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
pytz = "^2024.1"
jinja2 = "^3.1.4"
slowapi = "^0.1.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"